study-notes/geekbang.org/前端进阶训练营 | 第21周 | JavaScript迭代（一）/05-Toy-JavaScript | JavaScript语法基本框架/5.abnf
Program ::= Statement+ 

Statement ::= ExpressionStatement | IfStatement
   | ForStatement | WhileStatement
   | VariableDeclaration | FunctionDeclaration | ClassDeclaration
   | BreakStatement | ContinueStatement | ReturnStatement | ThrowStatement
   | TryStatement | Block

IfStatement ::= "if" "(" Expression ")" Statement

Block = "{" Statement "}"

TryStatement ::= "try" "{" Statement+ "}" "catch" "(" Expression ")" "{" Statement+ "}"

ExpressionStatement ::= Expression ";"

Expression ::= AdditiveExpression

AdditiveExpression ::= MultiplicativeExpression
    | AdditiveExpression ("+" | "-") MultiplicativeExpression

MultiplicativeExpression ::= UnaryExpression
    | MultiplicativeExpression ("*" | "/") UnaryExpression

UnaryExpression ::= PrimaryExpression
    | ("+" | "-" | "typeof") PrimaryExpression

PrimaryExpression ::= "(" Expression ")" | Literal | Identifier
